--- a/index.html
+++ b/index.html
@@ -1451,21 +1451,14 @@ pre.idl.highlight { color: #708090; }
      <dt>Previous Versions:
      <dd><a href="https://www.w3.org/TR/2016/WD-generic-sensor-20160324/" rel="previous">https://www.w3.org/TR/2016/WD-generic-sensor-20160324/</a>
      <dd><a href="https://www.w3.org/TR/2015/WD-generic-sensor-20151015/" rel="previous">https://www.w3.org/TR/2015/WD-generic-sensor-20151015/</a>
-     <dt>Version History:
-     <dd><a href="https://github.com/w3c/sensors/commits/gh-pages/index.bs">https://github.com/w3c/sensors/commits/gh-pages/index.bs</a>
      <dt>Feedback:
      <dd><span><a href="mailto:public-device-apis@w3.org?subject=%5Bgeneric-sensor%5D%20YOUR%20TOPIC%20HERE">public-device-apis@w3.org</a> with subject line “<kbd>[generic-sensor] <i data-lt="">… message topic …</i></kbd>” (<a href="https://lists.w3.org/Archives/Public/public-device-apis/" rel="discussion">archives</a>)</span>
-     <dt>Issue Tracking:
-     <dd><a href="https://github.com/w3c/sensors/issues/">GitHub</a>
-     <dd><span><a href="https://github.com/w3c/sensors/milestones/Level%201">Level 1 Issues</a></span>
-     <dd><span><a href="https://github.com/w3c/sensors/milestones/Level%202">Level 2 Issues</a></span>
+     <dd><span><a href="https://github.com/w3c/sensors">GitHub</a> (<a href="https://github.com/w3c/sensors/issues/new">new issue</a>, <a href="https://github.com/w3c/sensors/milestone/2">level 1 issues</a>, <a href="https://github.com/w3c/sensors/issues">all issues</a>)</span>
      <dt class="editor">Editors:
-     <dd class="editor p-author h-card vcard" data-editor-id="78102"><a class="p-name fn u-email email" href="mailto:tobie@sensors.codespeaks.com">Tobie Langel</a> (<span class="p-org org">Intel Corporation</span>)
+     <dd class="editor p-author h-card vcard" data-editor-id="78102"><a class="p-name fn u-url url" href="http://tobie.me">Tobie Langel</a> (<span class="p-org org">Intel Corporation</span>) <a class="u-email email" href="mailto:tobie@sensors.codespeaks.com">tobie@sensors.codespeaks.com</a>
      <dd class="editor p-author h-card vcard" data-editor-id="50572"><span class="p-name fn">Rick Waldron</span> (<span class="p-org org">jQuery Foundation</span>)
-     <dt>Bug Reports:
-     <dd><span><a href="https://www.github.com/w3c/sensors/issues/new">via the w3c/sensors repository on GitHub</a></span>
-     <dt>Test Suite:
-     <dd><span><a href="https://github.com/w3c/web-platform-tests/tree/master/generic-sensor">web-platform-tests on GitHub</a></span>
+     <dt>Other:
+     <dd><span><a href="https://github.com/w3c/web-platform-tests/tree/master/generic-sensor">Test suite</a>, <a href="https://github.com/w3c/sensors/commits/gh-pages/index.bs">version history</a></span>
     </dl>
    </div>
    <div data-fill-with="warning"></div>
