Fix update current reading algorithm.

--- a/index.html
+++ b/index.html
@@ -2407,7 +2407,8 @@ the <a data-link-type="dfn" href="#current-reading" id="ref-for-current-reading-
      <li data-md="">
       <p>Set <var>sensor</var>’s <a data-link-type="dfn" href="#reporting-flag" id="ref-for-reporting-flag-2">reporting flag</a>.</p>
      <li data-md="">
-      <p>Let <var>reading_instance</var> be the result of invoking <a data-link-type="dfn" href="#sensor-type" id="ref-for-sensor-type-25">sensor type</a>'s associated <a data-link-type="dfn" href="#construct-sensorreading-object" id="ref-for-construct-sensorreading-object-1">Construct SensorReading Object</a> operation,
+      <p>Let <var>reading_instance</var> be the result of invoking the <a data-link-type="dfn" href="#construct-sensorreading-object" id="ref-for-construct-sensorreading-object-1">Construct SensorReading Object</a> operation
+  associated with <var>sensor</var>’s <a data-link-type="dfn" href="#sensor-type" id="ref-for-sensor-type-25">type</a>,
   passing it <var>reading</var> as argument.</p>
      <li data-md="">
       <p>Set <var>sensor</var>’s <a data-link-type="dfn" href="#current-reading" id="ref-for-current-reading-4">current reading</a> to <var>reading_instance</var>.</p>
