--- a/index.html
+++ b/index.html
@@ -1850,11 +1850,11 @@ in the process.</p>
    <p>But <a data-link-type="dfn" href="#sensor-fusion" id="ref-for-sensor-fusion-6">sensor fusion</a> can also be carried out in software.
 This is particularly useful when performance requirements can only be met
 by relying on application-specific data.
-For example, head tracking for virtual or augmented reality applications,
+For example, head tracking for virtual or augmented reality applications
 requires extremely low latency
 to avoid causing motion sickness.
 That low-latency is best provided
-by using the raw output of a gyroscope,
+by using the raw output of a gyroscope
 and waiting for quick rotational movements of the head
 to compensate for drift.</p>
    <p class="note" role="note">Note: <a data-link-type="dfn" href="#concept-sensor" id="ref-for-concept-sensor-14">sensors</a> created through <a data-link-type="dfn" href="#sensor-fusion" id="ref-for-sensor-fusion-7">sensor fusion</a> are sometimes
