Desired freq, not freq.

--- a/index.html
+++ b/index.html
@@ -2348,7 +2348,7 @@ at which the <a data-link-type="dfn" href="#sensor-readings" id="ref-for-sensor-
       <p>For each <var>sensor_instance</var> in <var>sensor</var>’s set of <a data-link-type="dfn" href="#activated-sensor-objects" id="ref-for-activated-sensor-objects-5">activated Sensor objects</a>:</p>
       <ol>
        <li data-md="">
-        <p>let <var>f</var> be <var>sensor_instance</var>’s <a data-link-type="dfn" href="#frequency" id="ref-for-frequency-8">frequency</a>.</p>
+        <p>let <var>f</var> be <var>sensor_instance</var>’s <a data-link-type="dfn" href="#desired-frequency" id="ref-for-desired-frequency-2">desired frequency</a>.</p>
        <li data-md="">
         <p>if <var>f</var> is not <code>null</code> and <var>f</var> is greater than <var>frequency</var>,</p>
         <ol>
@@ -3206,7 +3206,7 @@ for their editorial input.</p>
     <li><a href="#ref-for-frequency-3">8.1.2. Sensor.reading</a>
     <li><a href="#ref-for-frequency-4">9.5. Observe a Sensor</a> <a href="#ref-for-frequency-5">(2)</a>
     <li><a href="#ref-for-frequency-6">9.6. Find Current Reporting Mode of a Sensor</a>
-    <li><a href="#ref-for-frequency-7">9.7. Find the polling frequency of a Sensor</a> <a href="#ref-for-frequency-8">(2)</a>
+    <li><a href="#ref-for-frequency-7">9.7. Find the polling frequency of a Sensor</a>
    </ul>
   </aside>
   <aside class="dfn-panel" data-for="periodic">
@@ -3487,6 +3487,7 @@ for their editorial input.</p>
    <b><a href="#desired-frequency">#desired-frequency</a></b><b>Referenced in:</b>
    <ul>
     <li><a href="#ref-for-desired-frequency-1">9.1. Construct Sensor Object</a>
+    <li><a href="#ref-for-desired-frequency-2">9.7. Find the polling frequency of a Sensor</a>
    </ul>
   </aside>
   <aside class="dfn-panel" data-for="sensor-task-source">
