Check frequency option is present.
Closes #125.

--- a/index.html
+++ b/index.html
@@ -2130,7 +2130,7 @@ at which the <a data-link-type="dfn" href="#sensor-readings" id="ref-for-sensor-
      <li data-md="">
       <p>Let <var>frequency</var> be the value of the <code class="idl"><a class="idl-code" data-link-type="dict-member" href="#dom-sensoroptions-frequency" id="ref-for-dom-sensoroptions-frequency-1">frequency</a></code> member of <var>options</var>.</p>
      <li data-md="">
-      <p>If <var>frequency</var> is not <code>null</code>,</p>
+      <p>If <var>frequency</var> is <a data-link-type="dfn" href="https://heycam.github.io/webidl/#dfn-present">present</a>,</p>
       <ol>
        <li data-md="">
         <p>If <var>sensor</var> <a data-link-type="dfn" href="#supports-periodic-reporting-mode" id="ref-for-supports-periodic-reporting-mode-1">supports periodic reporting mode</a>,</p>
@@ -3044,6 +3044,7 @@ for their editorial input.</p>
      <li><a href="https://heycam.github.io/webidl/#SecureContext">SecureContext</a>
      <li><a href="https://heycam.github.io/webidl/#dfn-create-exception">created</a>
      <li><a href="https://heycam.github.io/webidl/#dfn-exception">exception</a>
+     <li><a href="https://heycam.github.io/webidl/#dfn-present">present</a>
      <li><a href="https://heycam.github.io/webidl/#dfn-throw">throw</a>
     </ul>
   </ul>
